--- a/package.json
+++ b/package.json
@@ -69,5 +69,8 @@
     "vaul": "^0.9.9",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.15.2"
   }
 }
